issue 570 - add a LongClick to the Send Finalized Form "Toggle All" button to display all sent and unsent forms.